--- a/package.json
+++ b/package.json
@@ -19,41 +19,44 @@
 		"css-all": "node scripts/css-builder/index.cjs --all"
 	},
 	"dependencies": {
-		"@astrojs/react": "4.2.2",
+		"@astrojs/react": "^4.2.3",
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-navigation-menu": "^1.2.5",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
-		"astro": "5.5.5",
-		"astro-purgecss": "^5.2.2",
+		"@tailwindcss/postcss": "^4.1.0",
+		"@tailwindcss/typography": "^0.5.16",
+		"astro": "^5.5.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"purgecss": "^7.0.2",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"tailwind-merge": "^3.0.2"
+		"glob": "^11.0.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^4.1.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"peerDependencies": {
+		"@astrojs/react": "^4.0.0",
+		"astro": "^5.0.0",
+		"react": "^18.0.0 || ^19.0.0",
+		"react-dom": "^18.0.0 || ^19.0.0",
+		"tailwindcss": "^4.0.0"
 	},
 	"devDependencies": {
 		"@astrojs/alpinejs": "0.4.4",
-		"@astrojs/mdx": "4.2.2",
-		"@astrojs/partytown": "2.1.4",
-		"@astrojs/sitemap": "^3.3.0",
-		"@astrojs/tailwind": "6.0.2",
-		"@astrolib/seo": "^1.0.0-beta.8",
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-regular-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@playform/compress": "^0.1.1",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.0",
 		"@typescript-eslint/parser": "^8.2.0",
-		"alpinejs": "^3.14.8",
-		"astro-breadcrumbs": "^3.3.1",
 		"astro-compress": "^2.3.1",
-		"astro-seo": "^0.8.4",
+		"astro-purgecss": "^5.2.2",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -62,10 +65,8 @@
 		"eslint-plugin-tailwind": "^0.2.1",
 		"eslint-plugin-tailwindcss": "^3.17.4",
 		"eslint-plugin-unused-imports": "^4.1.4",
-		"glob": "^11.0.1",
-		"google-libphonenumber": "^3.2.38",
 		"lucide-react": "^0.476.0",
-		"postcss": "^8.5.1",
+		"postcss": "^8.5.3",
 		"postcss-html": "^1.7.0",
 		"postcss-loader": "^8.1.1",
 		"postcss-nesting": "^13.0.1",
@@ -74,18 +75,12 @@
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-md-nocjsp": "^1.5.1",
 		"prettier-plugin-organize-imports": "^4.0.0",
+		"purgecss": "^7.0.2",
 		"sass": "^1.83.0",
 		"sass-loader": "^16.0.4",
-		"schema-dts": "^1.1.2",
-		"shadcn": "^2.4.0-canary.9",
-		"shiki": "^1.17.7",
 		"stylelint": "^16.8.2",
 		"stylelint-config-recess-order": "^5.0.1",
 		"stylelint-config-standard-scss": "^14.0.0",
-		"tailwind-hamburgers": "^1.3.5",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-content-visibility": "^1.0.2",
 		"typescript": "^5.7.2"
 	}
 }
