--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@tailwindcss/postcss": "^4.1.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.0",
 		"astro": "^5.5.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -35,15 +36,14 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.0.2",
-		"tailwindcss": "^4.1.0",
+		"tailwindcss": "3",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"peerDependencies": {
 		"@astrojs/react": "^4.0.0",
 		"astro": "^5.0.0",
 		"react": "^18.0.0 || ^19.0.0",
-		"react-dom": "^18.0.0 || ^19.0.0",
-		"tailwindcss": "^4.0.0"
+		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
 		"@astrojs/alpinejs": "0.4.4",
@@ -53,7 +53,6 @@
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@playform/compress": "^0.1.1",
-		"@tailwindcss/vite": "^4.1.0",
 		"@typescript-eslint/parser": "^8.2.0",
 		"astro-compress": "^2.3.1",
 		"astro-purgecss": "^5.2.2",
