--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,17 +7,14 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "react",
 		"paths": {
-			"@components/*": ["src/components/*"],
-			"@layouts/*": ["src/layouts/*"],
+			"@components/*": ["src/css-builder/components/*"],
+			"@layouts/*": ["src/css-builder/layouts/*"],
 			"@styles/*": ["src/styles/*"],
-			"@config/*": ["src/config/*"],
-			"@data/*": ["src/data/*"],
-			"@utils/*": ["src/utils/*"],
-			"@scripts/*": ["src/scripts/*"],
+			"@config/*": ["src/css-builder/config/*"],
+			"@data/*": ["src/css-builder/data/*"],
+			"@scripts/*": ["src/css-builder/scripts/*"],
 			"@assets/*": ["src/assets/*"],
 			"@images/*": ["src/assets/images/*"],
-			"@projects/*": ["src/projects/*"],
-			"@design/*": ["src/design/*"],
 			"@/*": ["./src/*"],
 			"@@/*": ["./*"]
 		},
