--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 		"astro": "astro",
 		"lint": "eslint .",
 		"check": "astro check",
-		"map": "node src/css-builder/scripts/simple-file-mapper.cjs",
-		"css": "node src/css-builder/scripts/index.cjs",
-		"css-docs": "node src/css-builder/scripts//index.cjs --docs",
-		"css-components": "node src/css-builder/scripts/index.cjs --components",
-		"css-all": "node src/css-builder/scripts/index.cjs --all"
+		"map": "node src/css-builder/scripts/simple-file-mapper.js",
+		"css": "node src/css-builder/scripts/index.js",
+		"css-docs": "node src/css-builder/scripts/index.js --docs",
+		"css-components": "node src/css-builder/scripts/index.js --components",
+		"css-all": "node src/css-builder/scripts/index.js --all"
 	},
 	"dependencies": {
 		"@astrojs/react": "4.2.2",
