--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "CSS builder",
 	"type": "module",
 	"scripts": {
-		"dev": "astro dev --host --port 5000",
+		"dev": "npm run generate:handlers && astro dev --host --port 5000",
 		"start": "astro dev",
 		"build": "npm run generate:handlers && astro build",
 		"preview": "astro preview",
