refactor: Update component documentation and enhance CSS annotation processing
This commit refactors the component documentation in Astro pages and enhances the CSS annotation processing using PostCSS.

- Updates base class descriptions and variant descriptions for Button, Card, Text, Tooltip, Form, Badge and Infobox components in their respective Astro documentation pages to improve clarity and accuracy.
- Modifies the `postcss-css-annotations` plugin to improve tag value extraction, data structuring, and error handling.
- Updates the test suite for `postcss-css-annotations` to use `vitest` for more robust and reliable testing.
- Updates the `postcss-css-annotations` CLI tool to improve file processing and error reporting.
- Updates component types to accept a string value for size and radius.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint": "eslint .",
 		"check": "astro check",
 		"map": "node src/css-builder/scripts/simple-file-mapper.js",
-		"css": "node node src/css-summoner-integration.js --all",
+		"css": "node src/css-summoner-integration.js --all",
 		"css-docs": "node src/css-builder/scripts/css-summoner-integration.js --docs",
 		"css-components": "node src/css-builder/scripts/css-summoner-integration.js --components",
 		"css-all": "node src/css-builder/scripts/css-summoner-integration.js --all",
