--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,17 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "react",
 		"paths": {
-			"@components/*": ["src/css-summoner/components/*"],
-			"@layouts/*": ["src/css-summoner/layouts/*"],
+			"@components/*": ["src/css-summoner/ui/components/*"],
+			"@layouts/*": ["src/css-summoner/ui/layouts/*"],
+			"@hooks/*": ["src/css-summoner/ui/hooks/*"],
+			"@templates/*": ["src/css-summoner/ui/templates/*"],
+			"@ui/*": ["src/css-summoner/ui/*"],
 			"@styles/*": ["src/styles/*"],
 			"@stylesCss/*": ["src/css-summoner/styles/*"],
 			"@config/*": ["src/css-summoner/config/*"],
 			"@data/*": ["src/css-summoner/data/*"],
 			"@scripts/*": ["src/css-summoner/scripts/*"],
+			"@generators/*": ["src/css-summoner/scripts/generators/*"],
 			"@assets/*": ["src/assets/*"],
 			"@images/*": ["src/assets/images/*"],
 			"@/*": ["./src/*"],
