--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 			"@ui/*": ["src/css-summoner/ui/*"],
 			"@styles/*": ["src/styles/*"],
 			"@stylesCss/*": ["src/css-summoner/styles/*"],
+			"@configs/*": ["src/css-summoner/configs/*"],
 			"@config/*": ["src/css-summoner/config/*"],
 			"@data/*": ["src/css-summoner/data/*"],
 			"@scripts/*": ["src/css-summoner/scripts/*"],
