--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"highlight.js": "^11.11.1",
 		"purgecss": "^7.0.2",
 		"react": "^19.0.0",
+		"react-colorful": "^5.6.1",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.0.2"
 	},
