--- a/package.json
+++ b/package.json
@@ -5,46 +5,31 @@
 	"description": "CSS Summoner",
 	"type": "module",
 	"scripts": {
-		"dev": "npm run generate:handlers && npm run generate:astro-force && astro dev --host --port 5000",
+		"dev": "npm run setup && astro dev --host --port 5000",
+		"build": "npm run setup && astro build",
 		"start": "astro dev",
-		"build": "npm run generate:handlers && astro build",
 		"preview": "astro preview",
 		"astro": "astro",
 		"lint": "eslint .",
-		"check": "astro check",
 		"map": "node src/css-summoner/scripts/simple-file-mapper.js",
 		"css": "node src/css-summoner-integration.js --all",
-		"css-docs": "node src/css-summoner/scripts/css-summoner-integration.js --docs",
-		"css-components": "node src/css-summoner/scripts/css-summoner-integration.js --components",
-		"generate:handlers": "node src/css-summoner/scripts/generate-handler-manifest.js",
-		"generate:astro": "tsx src/css-summoner/scripts/generate-astro.js",
-		"generate:astro-force": "tsx src/css-summoner/scripts/generate-astro.js --force",
-		"extract-jsx": "node src/css-summoner/scripts/extract-jsx.js src/css-summoner/templates/handlers/auto",
-		"generate:types": "node src/css-summoner/scripts/generate-types.js"
+		"setup": "node scripts/setup.js"
 	},
 	"dependencies": {
 		"@astrojs/react": "4.2.2",
-		"@radix-ui/react-accordion": "^1.2.3",
-		"@radix-ui/react-dialog": "^1.1.6",
-		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-navigation-menu": "^1.2.5",
-		"@radix-ui/react-slot": "^1.1.2",
-		"@radix-ui/react-tabs": "^1.1.3",
+		"@types/react-dom": "^19.1.2",
 		"astro": "5.5.5",
-		"astro-purgecss": "^5.2.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"highlight.js": "^11.11.1",
-		"purgecss": "^7.0.2",
+		"postcss": "^8.5.1",
 		"react": "^19.0.0",
 		"react-colorful": "^5.6.1",
 		"react-dom": "^19.0.0",
-		"tailwind-merge": "^3.0.2"
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^3.4.17"
 	},
 	"devDependencies": {
-		"@astrojs/alpinejs": "0.4.4",
-		"@astrojs/mdx": "4.2.2",
-		"@astrojs/partytown": "2.1.4",
 		"@astrojs/sitemap": "^3.3.0",
 		"@astrojs/tailwind": "6.0.2",
 		"@astrolib/seo": "^1.0.0-beta.8",
@@ -53,13 +38,11 @@
 		"@fortawesome/free-regular-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
-		"@playform/compress": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/react": "^19.1.0",
 		"@typescript-eslint/parser": "^8.2.0",
-		"alpinejs": "^3.14.8",
-		"astro-breadcrumbs": "^3.3.1",
 		"astro-compress": "^2.3.1",
+		"astro-purgecss": "^5.2.2",
 		"astro-seo": "^0.8.4",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.18.0",
@@ -69,9 +52,6 @@
 		"eslint-plugin-tailwindcss": "^3.17.4",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"glob": "^11.0.1",
-		"google-libphonenumber": "^3.2.38",
-		"lucide-react": "^0.476.0",
-		"postcss": "^8.5.1",
 		"postcss-html": "^1.7.0",
 		"postcss-loader": "^8.1.1",
 		"postcss-nesting": "^13.0.1",
@@ -79,18 +59,8 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-organize-imports": "^4.0.0",
-		"sass": "^1.83.0",
-		"sass-loader": "^16.0.4",
-		"schema-dts": "^1.1.2",
-		"shadcn": "^2.4.0-canary.9",
-		"shiki": "^1.17.7",
-		"stylelint": "^16.8.2",
-		"stylelint-config-recess-order": "^5.0.1",
-		"stylelint-config-standard-scss": "^14.0.0",
-		"tailwind-hamburgers": "^1.3.5",
-		"tailwindcss": "^3.4.17",
+		"purgecss": "^7.0.2",
 		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-content-visibility": "^1.0.2",
 		"tsx": "^4.19.3",
 		"typescript": "^5.7.2"
 	}
