--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
 	"description": "CSS Summoner",
 	"type": "module",
 	"scripts": {
-		"dev": "npm run setup && astro dev --host --port 5000",
-		"build": "npm run setup && astro build",
+		"dev": "npm run setup && npm run bundle-css && astro dev --host --port 5000",
+		"build": "npm run setup && npm run bundle-css && astro build",
 		"start": "astro dev",
 		"preview": "astro preview",
 		"astro": "astro",
 		"lint": "eslint .",
 		"map": "node src/css-summoner/scripts/simple-file-mapper.js",
 		"css": "node src/css-summoner-integration.js --all",
-		"setup": "node scripts/setup.js"
+		"setup": "node scripts/setup.js",
+		"bundle-css": "node scripts/bundle-css.js"
 	},
 	"dependencies": {
 		"@astrojs/react": "4.2.4",
@@ -45,12 +46,14 @@
 		"astro-purgecss": "^5.2.2",
 		"astro-seo": "^0.8.4",
 		"autoprefixer": "^10.4.20",
+		"cssnano": "^7.0.6",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-astro": "^1.2.3",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
 		"eslint-plugin-tailwindcss": "^3.17.4",
 		"eslint-plugin-unused-imports": "^4.1.4",
+		"fs-extra": "^11.3.0",
 		"glob": "^11.0.1",
 		"postcss-html": "^1.7.0",
 		"postcss-loader": "^8.1.1",
